# Shadow

./: BLOCK_III_COMPLETE.txt  BLOCK_II_COMPLETE.txt  BLOCK_I_COMPLETE.txt  build.js  demo_analyze.js  demo_cloud.js  package-lock.json  package.json  tsconfig.json  verify.js
ai_observer/: observer.py
ai_observer/models/: heuristics.json
cli/: main.ts
cli/commands/: analyze.ts  init.ts  offload.ts  reclaim.ts  start.ts  status.ts  stop.ts  sync.ts
cloud/: build.sh  go.mod
cloud/api_gateway/: main.go
cloud/config/: cloud.config.json
cloud/runner/: docker_runner.go
cloud/session_service/: session_store.go  sync_worker.go
config/: shadow.config.json  shadow.engine.json
core/: Cargo.toml  dep_graph.rs
core/ast_diff/: lib.rs
core/ast_diff/languages/ts/: mod.rs
core/ast_diff/tests/: mod.rs
core/bindings/node/: index.ts
core/src/: diff.rs  engine.rs  lib.rs  session.rs
dashboard/minimal/: index.html  index.tsx
